--- a/MovieMap.css
+++ b/MovieMap.css
@@ -28,6 +28,11 @@ h1 {
   color: red;
 }
 
+/** Dropdown style*/
+.gwt-ListBox{
+    color:black
+}
+
 /** Set ids using widget.getElement().setId("idOfElement") */
 #closeButton {
   margin: 15px 6px 6px;
