--- a/MovieMap.css
+++ b/MovieMap.css
@@ -3,10 +3,10 @@
 
 /** Example rules used by the template application (remove for your app) */
 h1 {
-  font-size: 2em;
+  font-size: 4em;
   font-weight: bold;
   color: #777777;
-  margin: 40px 0px 70px;
+  margin: 100px 50px 150px;
   text-align: center;
 }
 
@@ -36,4 +36,9 @@ h1 {
 /** Set ids using widget.getElement().setId("idOfElement") */
 #closeButton {
   margin: 15px 6px 6px;
+}
+
+/** DataTable**/
+.Table {
+	margin: 2em 2em
 }
