--- a/MovieMap.css
+++ b/MovieMap.css
@@ -44,3 +44,19 @@ h1 {
 	clear: both;
 	margin: 2em 2em;
 }
+
+/** SwitchMapTableButtons**/
+.Showtable-button {
+	clear: left;
+	margin: 0em 1em;
+.Showmap-button {
+	clear: right;
+	margin: 0em 1em;
+	
+}
+
+/** SwitchMapTableButtons**/
+.rootMap {
+	clear: both;
+	margin: 1em 1em;
+}
