--- a/MovieMap.css
+++ b/MovieMap.css
@@ -44,3 +44,25 @@ h1 {
 	clear: both;
 	margin: 2em 2em;
 }
+
+/** CreativeCommons**/
+.cc {
+	float: right;
+	width: 300px;
+    border: 2px solid #ff0000;
+    overflow: auto;
+}
+
+/** CSV & PNG Export **/
+.exportCsv{
+	float: left;
+	width: 300px;
+    border: 2px solid #ff0000;
+    overflow: auto;
+}
+.exportPng{
+	float: left;
+	width: 300px;
+    border: 2px solid #ff0000;
+    overflow: auto;
+}
