--- a/MovieMap.css
+++ b/MovieMap.css
@@ -44,3 +44,49 @@ h1 {
 	clear: both;
 	margin: 2em 2em;
 }
+
+/** CreativeCommons**/
+.cc {
+	float: right;
+	width: 300px;
+    border: 2px solid #ff0000;
+    overflow: auto;
+}
+
+/** SwitchMapTableButtons**/
+.Showtable-button {
+	clear: left;
+	margin: 0em 1em;
+}
+.Showmap-button {
+	clear: right;
+	margin: 0em 1em;
+	
+}
+
+/** SwitchMapTableButtons**/
+.Map {
+	clear: both;
+	margin: 1em 1em;
+}
+
+.Navigation{
+	clear: both;
+	margin: 1em 0em;
+	}
+.Dropdown{
+	clear: both;
+	margin: 1em 0em;
+}
+
+/** CSV & PNG Export **/
+.exportCsv{
+	float: right;
+	width: 300px;
+    overflow: auto;
+}
+.exportPng{
+	float: right;
+	width: 300px;
+    overflow: auto;
+}
