--- a/MovieMap.css
+++ b/MovieMap.css
@@ -1,6 +1,9 @@
 /** Add css rules here for your application. */
 
-
+.body {
+    background-color: #e9e9e9;
+}
+ d
 /** Example rules used by the template application (remove for your app) */
 h1 {
   font-size: 4em;
@@ -30,8 +33,171 @@ h1 {
 }
 
 /** Dropdown style*/
-.gwt-ListBox{
-    color:black
+
+#rootDropdown {
+	width: 1005px;
+	margin: 0 auto;
+	margin-top: 10px;
+}
+
+.gwt-ListBox {
+    color: white;
+    font-family: "Myriad Pro", Helvetica, sans-serif;
+    font-weight: 600;
+    font-size: 10pt;
+    height: 40px;
+    min-width: 215px;
+    text-indent: 15px;
+    margin-left: 10px;
+    margin-right: 10px;
+    background-color: #55606e;
+    -webkit-appearance: none;
+    -webkit-border-radius: 0px;
+    border: 0px;
+    background-image: url("moviemap_page_arrow_down.png");
+    background-repeat: no-repeat;
+    background-position: right -2px;
+    outline: 0;
+    
+}
+
+.gwt-ListBox:hover {
+	background-color: #343a41;
+}
+.gwt-ListBox:active {
+	background-color: #24afb2;
+}
+
+#rootSearch {
+	width: 460px;
+	margin: 0 auto;
+	margin-top: -10px;
+}
+
+.gwt-Button {
+	color: white;
+    font-family: "Myriad Pro", Helvetica, sans-serif;
+    font-weight: 600;
+    font-size: 11pt !important;
+    text-align: center;
+    padding-top: 10px !important;
+    height: 40px;
+    width: 130px;
+    -webkit-appearance: none;
+    -webkit-border-radius: 0px !important;
+    border: 0px !important;
+	background: #55606e !important; 
+	outline: 0;
+}
+
+.gwt-Button:hover {
+	background-color: #343a41 !important;
+}
+
+.gwt-Button:active {
+	background-color: #24afb2 !important;
+}
+
+.gwt-Button2 {
+	color: white;
+    font-family: "Myriad Pro", Helvetica, sans-serif;
+    font-weight: 600;
+    font-size: 11pt !important;
+    text-align: center;
+    padding-top: 8px !important;
+    height: 40px;
+    width: 130px;
+    -webkit-appearance: none;
+    -webkit-border-radius: 0px !important;
+    border: 0px !important;
+	background-color: #24afb2 !important;
+	outline: 0;
+}
+
+#csv {
+	color: white !important;
+    font-family: "Myriad Pro", Helvetica, sans-serif !important;
+    font-weight: 600 !important;
+    font-size: 10pt !important;
+    text-align: center;
+    padding-top: 12px;
+    padding-bottom: 15px;
+    padding-left: 16px;
+    padding-right: 16px;
+    float: right;
+    width: 110px;
+    background-color: #55606e !important;
+}
+
+#csv:hover {
+	text-decoration: none;
+	background-color: #343a41 !important;
+}
+
+#png {
+	color: white !important;
+    font-family: "Myriad Pro", Helvetica, sans-serif !important;
+    font-weight: 600 !important;
+    font-size: 10pt !important;
+    text-align: center;
+    padding-top: 12px;
+    padding-bottom: 15px;
+    padding-left: 16px;
+    padding-right: 16px;
+    float: right;
+    width: 110px;
+    background-color: #55606e !important;
+}
+
+#png:hover {
+	text-decoration: none;
+	background-color: #343a41 !important;
+}
+
+.gwt-Export {
+	color: white !important;
+    font-family: "Myriad Pro", Helvetica, sans-serif !important;
+    font-weight: 600 !important;
+    font-size: 11pt !important;
+    text-align: center;
+    padding-top: 10px !important;
+    height: 25px;
+    width: 110px;
+    -webkit-appearance: none;
+    -webkit-border-radius: 0px !important;
+    border: 0px !important;
+	background: #55606e !important; 
+	outline: 0;
+}
+
+.textBox {
+	color: #55606e;
+	font-family: "Myriad Pro", Helvetica, sans-serif !important;
+    font-weight: 600;
+    font-size: 11pt !important;
+    text-indent: 5px;
+    padding-top: 10px !important;
+	height: 25px;
+    width: 330px;
+    -webkit-appearance: none;
+    -webkit-border-radius: 0px !important;
+    border: 0px !important;
+    background: white !important;
+    outline: 0;
+}
+
+.uploadLink {
+	color: #55606e;
+	font-family: "Myriad Pro", Helvetica, sans-serif !important;
+    font-weight: 600;
+    font-size: 12pt !important;
+	float: left;
+	padding-top: 10px;
+	text-decoration: underline;
+}
+
+.uploadLink:hover {
+	color: #55606e;
 }
 
 /** Set ids using widget.getElement().setId("idOfElement") */
@@ -40,29 +206,137 @@ h1 {
 }
 
 /** DataTable**/
-.Table {
+
+.watchListHeader {
+  background-color: #2062B8;
+  color: white;
+  font-style: italic;
+}
+
+.table {
 	clear: both;
-	margin: 2em 2em;
+	border-collapse: collapse;
+	border: 5px solid #8DCADE;
+	padding: 3px 70px 2px 70px;
+	background-color: white;
+	color: #8DCADE;
+}
+
+.cells {
+    color : #000000;
+    background-color: #f8f8f8;
+    height: 2em;
+    color: #55606e;
+	font-family: "Myriad Pro", Helvetica, sans-serif !important;
+    font-weight: 600;
+    font-size: 11pt !important;
+    border-bottom: 1px solid #acacac;
+    border-right: 1px solid #acacac;
+    border-collapse: collapse;
+}
+
+.cellsRight {
+    color : #000000;
+    background-color: #f8f8f8;
+    height: 2em;
+    color: #55606e;
+	font-family: "Myriad Pro", Helvetica, sans-serif !important;
+    font-weight: 600;
+    font-size: 11pt !important;
+    border-bottom: 1px solid #acacac;
+    border-collapse: collapse;
+}
+
+.cellsAlt {
+    color : #400040;
+    background-color: #f3fcfe;
+    font-style: bold;
+    height: 2em;
+    margin-top: -2px;
+    border-bottom: 1px solid black;
+    border-collapse: collapse;
+
+}
+
+.cellsHeader {
+    background: #55606e;
+    color: white;
+	font-family: "Myriad Pro", Helvetica, sans-serif !important;
+    font-weight: 600;
+    font-size: 12pt !important;
+    text-align: center;
+    border-collapse: collapse;
+}
+
+.gwt-Label {
+	color: #55606e;
+	font-family: "Myriad Pro", Helvetica, sans-serif !important;
+    font-weight: 600;
+    font-size: 14pt !important;
+}
+
+.sliderStyle {
+	display: block;
+	margin-top: 5px;
+	margin-left: 40px;
+}
+
+.sliderTitle {
+	width: 40px;
+	font-size: 18pt !important;
+	margin-left: 40px;
+}
+
+.sliderValue {
+	font-size: 23pt !important;
+	text-align: center;
+}
+
+.ui-widget-header {
+	background: #24afb2 !important;
+}
+
+.ui-state-hover, .ui-widget-content .ui-state-hover, .ui-widget-header .ui-state-hover, .ui-state-focus, .ui-widget-content .ui-state-focus, .ui-widget-header .ui-state-focus {
+	border: 1px solid #CB0000;
+}
+
+#title {
+	float: left;
+	margin-top: 20px;
+	width: 110px; 
+}
+#value {
+	float: left;
+	width: inherit; 
+	text-align: center;
+}
+
+#advertisement {
+	color: white !important;
+    font-family: "Myriad Pro", Helvetica, sans-serif !important;
+    font-weight: 600 !important;
+    font-size: 20pt !important;
+    text-align: center;
+    float: left;
+    height: 50px;
+    width: 700px;
+    padding-top: 20px;
+    background-color: #55606e !important;
 }
 
 /** CreativeCommons**/
 .cc {
-	float: right;
-	width: 300px;
-    border: 2px solid #ff0000;
-    overflow: auto;
+	float: left;
+	width: 470px;
+	color: #55606e;
+	padding: 10px;
+	font-family: "Myriad Pro", Helvetica, sans-serif !important;
+    font-weight: 600;
+    font-size: 11pt !important;
 }
 
 /** SwitchMapTableButtons**/
-.Showtable-button {
-	clear: left;
-	margin: 0em 1em;
-}
-.Showmap-button {
-	clear: right;
-	margin: 0em 1em;
-	
-}
+
 
 /** SwitchMapTableButtons**/
 .rootMap {
@@ -71,7 +345,6 @@ h1 {
 }
 
 .Navigation{
-	clear: both;
 	margin: 1em 0em;
 	}
 .Dropdown{
@@ -79,17 +352,7 @@ h1 {
 	margin: 1em 0em;
 }
 
-
-/** CSV & PNG Export **/
-.exportCsv{
-	float: left;
-	width: 300px;
-    border: 2px solid #ff0000;
-    overflow: auto;
-}
-.exportPng{
-	float: left;
-	width: 300px;
-    border: 2px solid #ff0000;
-    overflow: auto;
+.Search{
+	clear: both;
+	margin: 1em 0em;
 }
